--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -38,9 +38,7 @@ on early-init
     mkdir /dsp 0771 media media
 
 on fs
-    wait /dev/block/platform/soc/${ro.boot.bootdevice}
-    symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
-
+    wait /dev/block/bootdevice
     mount_all fstab.qcom
     write /proc/sys/vm/swappiness 100
 
@@ -603,17 +601,6 @@ service hostapd /system/bin/hostapd -dd /data/misc/wifi/hostapd.conf
     group root
     oneshot
     disabled
-
-service ril-daemon /system/bin/rild
-    class main
-    socket rild stream 660 root radio
-    socket sap_uim_socket1 stream 660 bluetooth bluetooth
-    socket rild-debug stream 660 radio system
-    socket cutback stream 660 media radio
-    socket wpa_wlan0 dgram 660 wifi wifi
-    user root
-    group radio cache inet misc audio log diag qcom_diag net_raw wifi compass
-    writepid /dev/cpuset/system-background/tasks
 
 service ril-daemon2 /system/bin/rild -c 2
     class main
