--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -264,6 +264,14 @@ on moto-charger
     trigger firmware_mounts_complete
     start thermal-com
 
+on property:ro.boot.dualsim=true
+    setprop persist.radio.multisim.config dsds
+    setprop ro.telephony.default_network 10,10
+
+on property:ro.boot.dualsim=false
+    setprop persist.radio.multisim.config ""
+    setprop ro.telephony.default_network 10
+
 service adspd /system/bin/adspd
    seclabel u:r:adspd:s0
    class main
