--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -55,7 +55,7 @@ on fs
 
 on init
     # Symbols required for motorola blobs
-    export LD_SHIM_LIBS /system/bin/adspd|libshim_adsp.so:/system/lib/libandroid.so|libshim_ril.so
+    export LD_SHIM_LIBS /system/bin/adsprpcd|libshim_adsp.so:/system/lib/libandroid.so|libshim_ril.so
 
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
@@ -210,9 +210,6 @@ on boot
     chmod 0664 /sys/class/graphics/fb0/mode
     chown system graphics /sys/class/graphics/fb0/msm_cmd_autorefresh_en
     chmod 0664 /sys/class/graphics/fb0/msm_cmd_autorefresh_en
-
-    # Wifi firmware reload path
-    chown wifi wifi /sys/module/wlan/parameters/fwpath
 
 # msm specific files that need to be created on /data
 on post-fs-data
@@ -486,27 +483,9 @@ service imsqmidaemon /system/bin/imsqmidaemon
     socket ims_qmid stream 0660 system radio
     group radio log diag
 
-# Config volte related prioperties
-service config-rcs-on /system/bin/sh /system/bin/rcs_config.sh on
-    user root
-    oneshot
-    disabled
-
-service config-rcs-off /system/bin/sh /system/bin/rcs_config.sh off
-    user root
-    oneshot
-    disabled
-
-on property:sys.ims.rcs=1
-   start config-rcs-on
-
-on property:sys.ims.rcs=0
-   start config-rcs-off
-
 service rmt_storage /system/bin/rmt_storage
     class core
     user root
-    group system wakelock
 
 service tftp_server /system/bin/tftp_server
    class core
@@ -728,21 +707,6 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpufreq/interactive/use_migration_notif 1
     write /proc/sys/kernel/sched_freq_inc_notify 200000
     write /proc/sys/kernel/sched_freq_dec_notify 200000
-
-    # Enable LMK
-    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
-    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 49152
-
-    # Enable KSM
-    write /sys/kernel/mm/ksm/pages_to_scan 100
-    write /sys/kernel/mm/ksm/sleep_millisecs 500
-    write /sys/kernel/mm/ksm/run 1
-
-    # Enable zram
-    write /sys/block/zram0/comp_algorithm lz4
-    swapon_all fstab.qcom
-    write /proc/sys/vm/page-cluster 0
-    write /proc/sys/vm/swappiness 100
 
     # Log kernel wake-up source
     write /sys/module/msm_show_resume_irq/parameters/debug_mask 1
