--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -211,6 +211,9 @@ on boot
     chown system graphics /sys/class/graphics/fb0/msm_cmd_autorefresh_en
     chmod 0664 /sys/class/graphics/fb0/msm_cmd_autorefresh_en
 
+    # Wifi firmware reload path
+    chown wifi wifi /sys/module/wlan/parameters/fwpath
+
 # msm specific files that need to be created on /data
 on post-fs-data
     mkdir /tombstones/modem 0771 system system
@@ -486,6 +489,7 @@ service imsqmidaemon /system/bin/imsqmidaemon
 service rmt_storage /system/bin/rmt_storage
     class core
     user root
+    group system wakelock
 
 service tftp_server /system/bin/tftp_server
    class core
