--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -55,7 +55,7 @@ on fs
 
 on init
     # Symbols required for motorola blobs
-    export LD_SHIM_LIBS /system/bin/adsprpcd|libshim_adsp.so:/system/lib/libandroid.so|libshim_ril.so
+    export LD_SHIM_LIBS /system/bin/adspd|libshim_adsp.so:/system/lib/libandroid.so|libshim_ril.so
 
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
@@ -337,6 +337,9 @@ on post-fs-data
     mkdir /data/misc/fm 0770 system system
     chmod 0770 /data/misc/fm
 
+    # Create directory for fm_radio
+    mkdir /data/misc/fm_radio 0770 system system
+
     # RIDL data
     mkdir /data/misc/SelfHost/ 0710 system shell
     mkdir /data/misc/SelfHost/QCLogs/ 2750 system shell
@@ -547,10 +550,17 @@ service ipacm /system/bin/ipacm
     user net_admin
     group net_admin inet
 
+service port-bridge /system/bin/port-bridge /dev/mhi_pipe_32 /dev/ttyGS0
+    class main
+    user radio system
+    group radio system inet
+    disabled
+    oneshot
+
 service qti /system/vendor/bin/qti
     class main
     user radio
-    group radio qcom_diag usb
+    group radio net_raw qcom_diag usb net_admin
 
 on property:ro.use_data_netmgrd=false
     # netmgr not supported on specific target
@@ -594,6 +604,11 @@ service wpa_supplicant /system/bin/wpa_supplicant \
     disabled
     oneshot
 
+service atfwd /system/bin/ATFWD-daemon
+    class late_start
+    user system
+    group system radio
+
 service hostapd /system/bin/hostapd -dd /data/misc/wifi/hostapd.conf
     class late_start
     user root
@@ -625,10 +640,10 @@ service rild2-wrapper /system/bin/sh /system/etc/init.qcom.ril.sh
     group root
     oneshot
 
-service msm_irqbalance /system/bin/msm_irqbalance -f /system/vendor/etc/msm_irqbalance.conf
-    class core
-    user root
-    group root
+#service msm_irqbalance /system/bin/msm_irqbalance -f /system/vendor/etc/msm_irqbalance.conf
+#    class core
+#    user root
+#    group root
 
 service loc_launcher /system/bin/loc_launcher
     #loc_launcher will start as root and set its uid to gps
@@ -642,6 +657,15 @@ on charger
     setprop sys.usb.configfs 0
     setprop persist.sys.usb.config mass_storage
     write /sys/class/leds/white/trigger "battery-full"
+
+on property:persist.radio.atfwd.start=false
+    stop atfwd
+
+on property:hw.fm.init=1
+    write /sys/module/radio_iris_transport/parameters/fmsmd_set 1
+
+on property:hw.fm.init=0
+    write /sys/module/radio_iris_transport/parameters/fmsmd_set 0
 
 on property:sys.boot_completed=1
     write /dev/kmsg "Boot completed "
